# pdbootstrap

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
pdbootstrap/: __init__.py  bootstrap_nb.py  bootstrap_pd.py
tests/: test_benchmarks.py  test_bootstrap_pd.py  test_data.py  test_permtest_pd.py
