[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdbootstrap"
version = "0.1.0"
description = "Modern bootstrap and permutation testing tools for pandas and numpy/numba arrays."
authors = [
    { name = "Your Name", email = "your@email.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "numba",
    "joblib",
    "tqdm"
]

[project.urls]
Homepage = "https://github.com/agartland/pdbootstrap"

[tool.setuptools]
packages = ["pdbootstrap"]
